# simple_shapes

./: Cargo.toml  README.org
examples/: circle_2d.rs  dam_water_3d.rs  grid_3d.rs  hollow_box_2d.rs  zhang_collapsing_cylinders.rs
src/: benchmarks.rs  lib.rs
